Add stylesheet link for icon styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         /* 扩展容器样式 */
         #music-player-container {
             position: fixed;
+            <link rel="stylesheet" href="icon.css">
             z-index: 9999;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         }
